# mutagen

./: .gitignore  CHANGELOG.md  Cargo.toml  Gemfile  README.md  Rakefile  deny.toml  flake.nix  mutagen.gemspec  package.nix
.github/workflows/: ci.yml
crates/mutagen_core/: Cargo.toml
crates/mutagen_core/src/: batch.rs  codegen.rs  filters.rs  lib.rs  parser.rs  selector.rs  store.rs
crates/mutagen_core/src/mutators/: arithmetic.rs  assignment.rs  block.rs  boolean.rs  comparison.rs  conditional.rs  literal.rs  mod.rs  regex.rs  return_val.rs  statement.rs  walk.rs
crates/mutagen_core/tests/: bdd.rs  bdd_selector.rs
docs/specs/: architecture.md  brief.md  ideas.md  roadmap.md
exe/: mutagen
ext/mutagen_ruby/: Cargo.toml  build.rs  extconf.rb
ext/mutagen_ruby/src/: lib.rs
lib/: mutagen.rb
lib/mutagen/: config.rb  coverage.rb  runner.rb  version.rb  worker_pool.rb
lib/mutagen/reporter/: console.rb  html.rb  json.rb
lib/mutagen/test_runner/: base.rb  minitest.rb  rspec.rb
spec/: spec_helper.rb
spec/mutagen/: config_spec.rb  coverage_spec.rb  native_spec.rb  runner_spec.rb  version_spec.rb  worker_pool_spec.rb
spec/mutagen/reporter/: console_spec.rb  json_spec.rb
spec/mutagen/test_runner/: minitest_spec.rb  rspec_spec.rb
tests/features/mutations/: arithmetic.feature  boolean.feature  comparison.feature  conditional.feature  literal.feature
tests/features/selector/: cache.feature  coverage.feature  sampling.feature  sharding.feature
