[package]
name = "mutagen_core"
version = "0.2.0"
edition = "2021"
description = "Core mutation testing engine for Ruby source code"
license = "MIT"

[dependencies]
lib-ruby-parser = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rayon = "1"

[dev-dependencies]
insta = { version = "1", features = ["json", "redactions"] }
proptest = "1"
pretty_assertions = "1"
cucumber = { version = "0.20", features = ["macros"] }
futures = "0.3"
tempfile = "3"

[[test]]
name = "bdd"
harness = false

[[test]]
name = "bdd_selector"
harness = false
